start re-write w02

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -12,6 +12,10 @@ book:
     - part: "Module overview"
       chapters:
         - index.qmd
+    - part: "Foundational Concepts"
+      chapters:
+        - 01-introduction.qmd
+        - 02-GIScience.qmd
 
 # output
 format:
