--- a/_variables.yml
+++ b/_variables.yml
@@ -9,7 +9,7 @@ urls:
   w03: "03-cartography.html"
   w04: "04-statistics.html"
   w05: "05-spatial.html"
-  w06: ""
+  w06: "06-operations.html"
   w07: ""
   w08: ""
   w09: ""
